--- a/main.html
+++ b/main.html
@@ -4,9 +4,25 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<style>
+		#container{
+			margin:20px;
+		}
+		#container::before{
+			content:"Before Element ";
+			color:red;
+			font-size:20px;
+		}
+		#container::after{
+			content:" After Element";
+			color:red;
+			font-size:20px;
+		}
+	</style>
 </head>
 
 <body>
+	<div id="container">This is the main container element</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
